ui/src/components/Charts/styles.css
.chart {
  height: 100%;
  display: flex;
  flex-direction: column;
}

.chart svg g text {
  font-size: 12px; }

.barContainer {
  display: flex;
  flex-grow: 1;
}

.customTooltip {
  width: auto;
  margin: 0;
  padding-top: 5px;
  padding-left: 5px;
  padding-right: 5px;
  line-height: 8px;
  border: 2px solid #f5f5f5;
  background-color: rgba(255, 255, 255, 0.8);
  border-radius: 2px;
  font-size: 12px; }

.label {
  margin: 1;
  color: #ED7030;
  font-weight: 700;
  word-break: break-all;
}

.value {
  margin: 5;
  color: #000;
  font-weight: 300; }

.desc {
  margin: 0;
  color: #999; }

.buttons {
  display: flex;
  flex-direction: row;
  flex-shrink: 0;
  margin-top: -4px;
}

.prevButton {
  align-self: flex-start;
  margin-left: 10px; }

.nextButton {
  margin-right: 10px;
  margin-left: auto; }

.xAxis {
  display: inline-block;
  white-space: nowrap; }

.xAxisLabel {
  text-align: right;
  word-break: break-word;
  overflow: hidden;
  text-overflow: ellipsis;
  flex-shrink: 0;
  position: static;
  margin-right: 15px;
  margin-bottom: 10px;
}

.yAxisLabel {
  writing-mode: vertical-lr;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  transform: rotate(-180deg);
  max-width: 20px; /* otherwise this element pushes chart of the page in firefox, (dispite the element naturally being 20px) */
}

.yAxis {
  display: inline-block;
  writing-mode: vertical-lr;
  transform: rotate(-180deg);
  margin: auto 0;
  }

.chartWrapper {
  flex-grow: 1;
  flex-shrink: 0;
}

